# cbPDF

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
helpers/: files.py
modules/: files.py  parser.py  pdf.py
